tests/invalid/annotation_dict_three_args/main.py
def run_case() -> None:
    bad: dict[int, int, int] = {}


if __name__ == "__main__":
    run_case()
